Archive2/c8/8aa861273cd20e/output
main.cpp:28:55: error: use of undeclared identifier 'cartesian'
        customCRD { {  {1,  2},  {3,  4},  {5,  6} }, cartesian },
                                                      ^
main.cpp:29:55: error: use of undeclared identifier 'spherical'
        customCRD { {  {7,  8},  {9, 10}, {11, 12} }, spherical },
                                                      ^
main.cpp:30:57: error: use of undeclared identifier 'custom2'
        customCRD { { {13, 14}, {15, 16}, {17, 18} },   custom2 },
                                                        ^
main.cpp:33:75: error: no member named 'havingcorner' in 'customCRD'; did you mean 'havingCorner'?
    std::cout << "{9,10} found: " << boost::empty(v | filtered(customCRD::havingcorner(coordinate(9,10)))) << "\n";
                                                               ~~~~~~~~~~~^
main.cpp:19:12: note: 'havingCorner' declared here
    struct havingCorner {
           ^
4 errors generated.
